Fix layout on mobile

--- a/src/assets/css/5-elements/_body.scss
+++ b/src/assets/css/5-elements/_body.scss
@@ -6,3 +6,7 @@ body {
   // padding-right: var(--scrollbarComp);
   overflow-x: hidden;
 }
+
+* {
+  box-sizing: border-box;
+}
